--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html, body, #root {
+  min-height: 100vh;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +13,19 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+
+.App {
+  display: flex;
+  flex-direction: column;
+  
+  justify-content: space-between;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  
 }
