--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,7 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: Inter, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
@@ -25,7 +23,6 @@ main {
   padding-inline: 2rem;
   padding-block: 4rem;
 
-  font-family: sans-serif;
   text-align: center;
 
   margin-inline: auto;
